--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
     <script>
         // ⚙️ CONFIGURE YOUR API URL HERE
-        const API_BASE_URL = 'https://your-railway-app.railway.app';
+        const API_BASE_URL = 'https://doc-pepper-rag-backend-production.up.railway.app';
         
         const CORRECT_PASSWORD = "cabairagadmin";
         let selectedFile = null;
